# movie-recommender

./: .gitignore  README.md  Rapport.ipynb  app.py  movie_recommender.ipynb  pyproject.toml  readme.md  recommender.py
